objects/CMPL123CME__MedDRAFileReadConfiguration__mdt.object
<CustomObject>
    <description>Used for mapping the files to respective objects in salesforce.</description>
    <fields>
        <fullName>CMPL123CME__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_Id_Field_Data__c</fullName>
        <label>External Id Field Data</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__External_Id_Field__c</fullName>
        <label>External Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Fields_Info__c</fullName>
        <description>JSON string with sequence Number and Salesforce Field API
** Sequence Number will be used to identify the field in file and API Field will be used to map it to Salesforce.</description>
        <label>Fields Info</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__File_Chunk_Size__c</fullName>
        <label>File Chunk Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__File_Name__c</fullName>
        <label>File Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Impacted_Fields__c</fullName>
        <description>Impacted Fields for record deactivation</description>
        <label>Impacted Fields</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Import_Sequence__c</fullName>
        <description>Sequence will be used for import</description>
        <label>Import Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Is_Independent_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>default false</description>
        <label>Is Independent File?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Language__c</fullName>
        <label>Language</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Level_of_Dependency__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Level of Dependency</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123CME__Parent_Object_Info__c</fullName>
        <label>Parent Object Info</label>
        <length>750</length>
        <type>LongTextArea</type>
    </fields>
    <label>MedDRAFileReadConfiguration</label>
    <listViews>
        <fullName>CMPL123CME__ASCII_Files</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__File_Name__c</columns>
        <columns>CMPL123CME__Object_Name__c</columns>
        <columns>CMPL123CME__Import_Sequence__c</columns>
        <columns>CMPL123CME__External_Id_Field__c</columns>
        <columns>CMPL123CME__Level_of_Dependency__c</columns>
        <columns>CMPL123CME__Is_Independent_File__c</columns>
        <columns>CMPL123CME__Parent_Object_Info__c</columns>
        <columns>CMPL123CME__Language__c</columns>
        <columns>CMPL123CME__Fields_Info__c</columns>
        <columns>CMPL123CME__Active__c</columns>
        <columns>CMPL123CME__File_Chunk_Size__c</columns>
        <columns>CMPL123CME__External_Id_Field_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__File_Name__c</field>
            <operation>contains</operation>
            <value>.asc</value>
        </filters>
        <filters>
            <field>CMPL123CME__Language__c</field>
            <operation>equals</operation>
            <value>English</value>
        </filters>
        <label>ASCII Files</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__JAPANESE_ASCII</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__File_Name__c</columns>
        <columns>CMPL123CME__Object_Name__c</columns>
        <columns>CMPL123CME__Import_Sequence__c</columns>
        <columns>CMPL123CME__External_Id_Field__c</columns>
        <columns>CMPL123CME__Level_of_Dependency__c</columns>
        <columns>CMPL123CME__Is_Independent_File__c</columns>
        <columns>CMPL123CME__Parent_Object_Info__c</columns>
        <columns>CMPL123CME__Language__c</columns>
        <columns>CMPL123CME__Fields_Info__c</columns>
        <columns>CMPL123CME__Active__c</columns>
        <columns>CMPL123CME__File_Chunk_Size__c</columns>
        <columns>CMPL123CME__External_Id_Field_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__Language__c</field>
            <operation>equals</operation>
            <value>Japanese</value>
        </filters>
        <filters>
            <field>CMPL123CME__File_Name__c</field>
            <operation>contains</operation>
            <value>.asc</value>
        </filters>
        <label>JAPANESE ASCII</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__MedDRA_File_Read_Default</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__File_Name__c</columns>
        <columns>CMPL123CME__Import_Sequence__c</columns>
        <columns>CMPL123CME__Object_Name__c</columns>
        <columns>CMPL123CME__Level_of_Dependency__c</columns>
        <columns>CMPL123CME__Impacted_Fields__c</columns>
        <columns>CMPL123CME__Is_Independent_File__c</columns>
        <columns>CMPL123CME__External_Id_Field__c</columns>
        <columns>CMPL123CME__Parent_Object_Info__c</columns>
        <filterScope>Everything</filterScope>
        <label>MedDRA File Read Default</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CMPL123CME__SEQ_Files</fullName>
        <columns>MasterLabel</columns>
        <columns>CMPL123CME__File_Name__c</columns>
        <columns>CMPL123CME__Object_Name__c</columns>
        <columns>CMPL123CME__Import_Sequence__c</columns>
        <columns>CMPL123CME__External_Id_Field__c</columns>
        <columns>CMPL123CME__Level_of_Dependency__c</columns>
        <columns>CMPL123CME__Is_Independent_File__c</columns>
        <columns>CMPL123CME__Parent_Object_Info__c</columns>
        <columns>CMPL123CME__Language__c</columns>
        <columns>CMPL123CME__Fields_Info__c</columns>
        <columns>CMPL123CME__File_Chunk_Size__c</columns>
        <columns>CMPL123CME__Active__c</columns>
        <columns>CMPL123CME__External_Id_Field_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CMPL123CME__File_Name__c</field>
            <operation>contains</operation>
            <value>.seq</value>
        </filters>
        <filters>
            <field>CMPL123CME__Language__c</field>
            <operation>equals</operation>
            <value>English</value>
        </filters>
        <label>SEQ Files</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>MedDRAFileReadConfigurations</pluralLabel>
</CustomObject>